--- a/Assignment2/Layout1.css
+++ b/Assignment2/Layout1.css
@@ -15,13 +15,13 @@
     right: 20px;
     top: 20px;
 }
-header{
+/* header{
     font-size: 50px;
     color: #c5302e;
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
-}
+} */
 .clothing{
     display: flex;
    color:whitesmoke;
@@ -45,4 +45,9 @@ header{
     bottom: 0;
     right: 0;
     padding: 20px;
+}
+.h1-title{
+    font-size: 50px;
+    color: #c5302e;
+    text-align: center;
 }
